# ----------------------------------------------------------------------------
# @file    messaged/CMakeLists.txt
# @brief   input to the CMake build system for building message daemon
# @author  David Hale <dhale@caltech.edu>
# ----------------------------------------------------------------------------

cmake_minimum_required( VERSION 3.12 )

set( MESSAGED_DIR ${PROJECT_BASE_DIR}/messaged )

set( CMAKE_CXX_STANDARD 17 )

include_directories( ${PROJECT_BASE_DIR}/utils )
include_directories( ${PROJECT_BASE_DIR}/common )

find_library( ZMQPP_LIB NAMES zmqpp libzmqpp
              PATHS /usr/local/lib /opt/homebrew/lib /usr/local/opt/zmqpp/lib /opt/homebrew/opt/zmqpp/lib )
find_library( ZMQ_LIB NAMES zmq libzmq
              PATHS /usr/local/lib /opt/homebrew/lib /usr/local/opt/zeromq/lib /opt/homebrew/opt/zeromq/lib )

link_directories( ${PROJECT_BASE_DIR}/lib )

add_executable(messaged 
        ${MESSAGED_DIR}/messaged.cpp 
        )

target_link_libraries(messaged
        common
        logentry
        utilities
        ${CMAKE_THREAD_LIBS_INIT}
        ${ZMQPP_LIB}
        ${ZMQ_LIB}
        )

# -- Port Definitions ----------------------------------------------------------
#
# portdefs is the master list of ports for NGPS and is used to generate the
# individual .cfg files to avoid conflicts across multiple files, by keeping
# them all in one place..
#
INCLUDE( ${PROJECT_BASE_DIR}/Config/portdefs )
INCLUDE( ${PROJECT_BASE_DIR}/Config/privatelan )
INCLUDE( ${PROJECT_BASE_DIR}/Config/ets8p )
set ( MESSAGED_CFG_COMMENT "This file is automatically generated. Manual edits may be overwritten." )
CONFIGURE_FILE( ${PROJECT_BASE_DIR}/Config/messaged.cfg.in ${PROJECT_BASE_DIR}/Config/messaged.cfg )
