# ----------------------------------------------------------------------------
# @file    powerd/CMakeLists.txt
# @brief   input to the CMake build system for building power daemon
# @author  David Hale <dhale@caltech.edu>
# ----------------------------------------------------------------------------

cmake_minimum_required( VERSION 3.12 )

set( POWERD_DIR ${PROJECT_BASE_DIR}/powerd )

set( CMAKE_CXX_STANDARD 17 )

include_directories( ${PROJECT_BASE_DIR}/utils )
include_directories( ${PROJECT_BASE_DIR}/common )
include_directories( ${PROJECT_BASE_DIR}/WTI )

link_directories( ${PROJECT_BASE_DIR}/lib )

add_executable(powerd 
        ${POWERD_DIR}/powerd.cpp 
        ${POWERD_DIR}/power_server.cpp
        ${POWERD_DIR}/power_interface.cpp 
        )

target_link_libraries(powerd
        wti
        network
        common
        logentry
        utilities
        ${CMAKE_THREAD_LIBS_INIT}
        ${ZMQPP_LIB}
        ${ZMQ_LIB}
        )

# ZeroMQ
#
find_library( ZMQPP_LIB NAMES zmqpp libzmqpp
              PATHS ${NGPS_ZMQ_SEARCH_PATHS} ${NGPS_ZMQ_FIND_MODE} )
find_library( ZMQ_LIB NAMES zmq libzmq
              PATHS ${NGPS_ZMQ_SEARCH_PATHS} ${NGPS_ZMQ_FIND_MODE} )

# -- Port/Address Definitions --------------------------------------------------
#
# portdefs is the master list of ports for NGPS and privatelan is the master
# list of all private LAN IP addresses; together they are used to generate the
# individual .cfg files to avoid conflicts across multiple files, by keeping
# them all in one place..
#
INCLUDE( ${PROJECT_BASE_DIR}/Config/portdefs )
INCLUDE( ${PROJECT_BASE_DIR}/Config/privatelan )
set ( POWERD_CFG_COMMENT "This file is automatically generated. Manual edits may be overwriten." )
CONFIGURE_FILE( ${PROJECT_BASE_DIR}/Config/powerd.cfg.in ${PROJECT_BASE_DIR}/Config/powerd.cfg )
