# ----------------------------------------------------------------------------
# @file    sequencerd/CMakeLists.txt
# @brief   input to the CMake build system for building sequencer daemon
# @author  David Hale <dhale@caltech.edu>
# ----------------------------------------------------------------------------

cmake_minimum_required( VERSION 3.12 )

set( SEQUENCER_DIR ${PROJECT_BASE_DIR}/sequencerd )

set( CMAKE_CXX_STANDARD 17 )

add_definitions( -Wall -ansi -O1 -Wno-variadic-macros -ggdb )

include_directories( ${PROJECT_BASE_DIR}/utils )
include_directories( ${PROJECT_BASE_DIR}/common )

link_directories( ${PROJECT_BASE_DIR}/lib )

find_path( PYTHON_DEV "Python.h" PATHS /usr/include/python3.9 )
find_library( PYTHON_LIB python3.9 NAMES libpython3.9 PATHS /usr/lib64 )
include_directories( ${PYTHON_DEV} )

# -- MySQL database ------------------------------------------------------------
#
set( MYSQL_DIR "/usr/local/mysql/connector" )
find_path( MYSQL_API "mysqlx/xdevapi.h" PATHS ${MYSQL_DIR}/include )
set( MYSQL_INCLUDES "${MYSQL_API}" )
find_library( MYSQL_LIB "mysqlcppconn8" NAMES "mysqlcppconn8" PATHS ${MYSQL_DIR}/lib64 )
include_directories( ${MYSQL_INCLUDES} )

add_executable(sequencerd
        ${SEQUENCER_DIR}/sequencerd.cpp 
        ${SEQUENCER_DIR}/sequencer_server.cpp 
        ${SEQUENCER_DIR}/sequencer_interface.cpp 
        ${SEQUENCER_DIR}/sequence.cpp 
        ${MYSQL_INCLUDES}
        ${PYTHON_DEV}
        )

target_link_libraries(sequencerd
        network
        common
        logentry
        utilities
        ${CMAKE_THREAD_LIBS_INIT}
        ${CCFITS_LIB}
        ${CFITS_LIB}
        ${MYSQL_LIB}
        ${PYTHON_LIB}
        )

# -- Port Definitions ----------------------------------------------------------
#
# portdefs is the master list of ports for NGPS and is used to generate the
# individual .cfg files to avoid conflicts across multiple files, by keeping
# them all in one place..
#
INCLUDE( ${PROJECT_BASE_DIR}/Config/portdefs )
set ( SEQUENCERD_CFG_COMMENT "This file is automatically generated. Manual edits may be overwritten." )
CONFIGURE_FILE( ${PROJECT_BASE_DIR}/Config/sequencerd.cfg.in ${PROJECT_BASE_DIR}/Config/sequencerd.cfg )
