# ----------------------------------------------------------------------------
# @file    sequencerd/CMakeLists.txt
# @brief   input to the CMake build system for building sequencer daemon
# @author  David Hale <dhale@caltech.edu>
# ----------------------------------------------------------------------------

cmake_minimum_required( VERSION 3.12 )

set( SEQUENCER_DIR ${PROJECT_BASE_DIR}/sequencerd )

set( CMAKE_CXX_STANDARD 17 )

add_definitions( -Wall -O1 -Wno-variadic-macros -ggdb )

include_directories( ${PROJECT_BASE_DIR}/utils )
include_directories( ${PROJECT_BASE_DIR}/common )
include_directories( ${PROJECT_BASE_DIR}/acamd )

link_directories( ${PROJECT_BASE_DIR}/lib )

find_package( Python3 COMPONENTS Development )
if ( Python3_FOUND )
  list( GET Python3_INCLUDE_DIRS 0 PYTHON_DEV )
  list( GET Python3_LIBRARIES 0 PYTHON_LIB )
else()
  find_path( PYTHON_DEV "Python.h" PATHS /usr/include/python3.9 )
  find_library( PYTHON_LIB NAMES python3.9 libpython3.9 PATHS /usr/lib64 )
endif()
include_directories( ${PYTHON_DEV} )

find_library( ZMQPP_LIB NAMES zmqpp libzmqpp
              PATHS ${NGPS_ZMQ_SEARCH_PATHS} ${NGPS_ZMQ_FIND_MODE} )
find_library( ZMQ_LIB NAMES zmq libzmq
              PATHS ${NGPS_ZMQ_SEARCH_PATHS} ${NGPS_ZMQ_FIND_MODE} )
find_library( CFITS_LIB cfitsio NAMES libcfitsio PATHS /usr/local/lib /opt/homebrew/lib )

# -- MySQL database ------------------------------------------------------------
#
set( MYSQL_DIR "/usr/local/mysql/connector" )
find_path( MYSQL_API "mysqlx/xdevapi.h"
           PATHS ${MYSQL_DIR} /usr/local/opt/mysql-connector-c++ /opt/homebrew/opt/mysql-connector-c++
           PATH_SUFFIXES include )
set( MYSQL_INCLUDES "${MYSQL_API}" )
find_library( MYSQL_LIB NAMES mysqlcppconnx mysqlcppconn8 mysqlcppconn
              PATHS ${MYSQL_DIR} /usr/local/opt/mysql-connector-c++ /opt/homebrew/opt/mysql-connector-c++
              PATH_SUFFIXES lib lib64 )
include_directories( ${MYSQL_INCLUDES} )

add_executable(sequencerd
        ${SEQUENCER_DIR}/sequencerd.cpp 
        ${SEQUENCER_DIR}/sequencer_server.cpp 
        ${SEQUENCER_DIR}/sequencer_interface.cpp 
        ${SEQUENCER_DIR}/sequence.cpp 
        ${MYSQL_INCLUDES}
        ${PYTHON_DEV}
        )

target_link_libraries(sequencerd
        network
        common
        logentry
        utilities
        skyinfo
        database
        ${CMAKE_THREAD_LIBS_INIT}
        ${CFITS_LIB}
        ${MYSQL_LIB}
        ${PYTHON_LIB}
        ${ZMQPP_LIB}
        ${ZMQ_LIB}
        )

# -- Port Definitions ----------------------------------------------------------
#
# portdefs is the master list of ports for NGPS and is used to generate the
# individual .cfg files to avoid conflicts across multiple files, by keeping
# them all in one place..
#
INCLUDE( ${PROJECT_BASE_DIR}/Config/portdefs )
set ( SEQUENCERD_CFG_COMMENT "This file is automatically generated. Manual edits may be overwritten." )
CONFIGURE_FILE( ${PROJECT_BASE_DIR}/Config/sequencerd.cfg.in ${PROJECT_BASE_DIR}/Config/sequencerd.cfg )
